доработка формы и футера

--- a/portfolio.html
+++ b/portfolio.html
@@ -326,24 +326,22 @@
         <div class="wrapper-form-footer">
           <form class="form-footer">
             <div class="form-field-footer">
-              <label class="form-label" for="email"
-                >Підпишіться на розсилку</label
-              >
-              <input
-                class="form-input"
-                type="mail"
-                name="email"
-                id="email"
-                placeholder="E-mail"
-              />
+              <p class="form-label">Підпишіться на розсилку</p>
+              <label for="email">
+                <input
+                  class="form-input"
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="E-mail"
+                />
+              </label>
             </div>
-            <div>
-              <button class="button-form-footer" type="submit">
-                Підписатися<svg class="icon-form-footer" width="24" height="24">
-                  <use href="./images/symbol-defs.svg#icon-airplane"></use>
-                </svg>
-              </button>
-            </div>
+            <button class="button-form-footer" type="submit">
+              Підписатися<svg class="icon-form-footer" width="24" height="24">
+                <use href="./images/symbol-defs.svg#icon-airplane"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
